<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Automata</string>
    <string name="action_restart">Restart</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome to Automata!  This game is a simulation of Conway\'s game of life.</string>
    <string name="start_button_text">Start</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pause">Pause</string>
    <string name="play">play</string>
    <string name="action_pause">Pause</string>
    <string name="action_play">Play</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="free_play">Free Play</string>
    <string name="options">Options</string>
    <string name="title_activity_level_select">Select Level</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_level_group_select">Select Realm</string>
    <string name="title_victory_fragment">Victory!</string>
    <string name="title_failure_fragment">Failure!</string>
    <string name="ok_button_victory_fragment">OK</string>
    <string name="victory_text_left">Text Left</string>
    <string name="victory_text_right">Text Right</string>

</resources>