<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	
    <item android:id="@+id/menu_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit_mode"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:visible="true"
        android:onClick="onOptionsItemSelected" />
    
    <item android:id="@+id/menu_move"
        android:title="@string/action_save"
        android:icon="@drawable/ic_action_move_mode"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:visible="false"
        android:onClick="onOptionsItemSelected" />
    
	<item android:id="@+id/menu_pause"
        android:title="@string/action_pause"
        android:icon="@drawable/ic_action_pause"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:visible="true"
        android:onClick="onOptionsItemSelected" />
	
	<item android:id="@+id/menu_play"
        android:title="@string/action_play"
        android:icon="@drawable/ic_action_play"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:visible="false"
        android:onClick="onOptionsItemSelected" />
	
	<item
        android:id="@+id/menu_restart"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_restart"
        android:onClick="onOptionsItemSelected"/>
	
</menu>